# science-discovery-ai

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  test.py
.claude/: settings.local.json
.opencode/plugins/: session-folder.js  test.js
.opencode_sessions/: current_session.txt
examples/earthquake_prediction/: report.md
examples/financial_crisis_prediction/: 01_data_integration.py  02_tcn_model.py  README.md  predictions_5year_cv.csv  report.md  session-ses_392f.md
examples/financial_crisis_prediction/work_in_progress/: JSTdatasetR6.csv  WORKING_REAL_DATA_ANALYZER.py  data_gpr_export.csv  esrb.fcdb20220120.en.csv  explainable_real_data.py  final_analysis.py  final_working_script.py  run_simple_analysis.py
src/: generate_pdf_report.py  search_paper.py
templates/: AGENTS_RESEARCH_FRAMEWORK.md  FORM.md  FORM_economic_research.md
