[project]
name = "science-discovery-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cuml-cu12>=26.2.0",
    "cupy-cuda12x>=13.6.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "xgboost>=3.2.0",
]
